examples/test/testpolicy13757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13757
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key22: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value35
          key16: value11
          key17: value12
      podSelector:
        matchLabels:
          key14: value7
          key48: value13
